Manage the about section of all case studies

--- a/works/hydro-steam-nw.html
+++ b/works/hydro-steam-nw.html
@@ -91,14 +91,14 @@
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-12">
-                    <div class="md:col-span-6">
+                    <div class="md:col-start-1 md:col-span-6">
                         <p class="mb-4 uppercase tracking-widest">About the Project</p>
                         <h1 class="mb-4 text-4xl lg:text-6xl">Project Background</h1>
                         <p class="mb-4">Hydro Steam Northwest is a family-owned and locally operated cleaning company providing superior and affordable cleaning services for your House, Apartment, Studio or Office.</p>
                         <p class="mb-4">My role was to design the website that is clean and has an intuitive layout to provide seamless experience to their customers and attract more customers to their business. I had to create a website with clean code which should be easy to update.</p>
                         <a href="https://hydrosteamnw.com/" class="mt-8 inline-flex h-[52px] items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">View Live Website <i class="las la-arrow-right ml-2 -rotate-45 text-3xl"></i></a>
                     </div>
-                    <div class="md:col-span-4">
+                    <div class="md:col-end-13 md:col-span-5">
                         <div class="mb-8">
                             <p class="mb-4 uppercase tracking-widest">Agency</p>
                             <p>Clickagee</p>
