--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -91,13 +91,13 @@
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-12">
-                    <div class="md:col-start-1 md:col-span-6">
+                    <div class="md:col-span-6 md:col-start-1">
                         <p class="mb-4 uppercase tracking-widest">About the Project</p>
                         <h1 class="mb-4 text-4xl lg:text-6xl">Project Background</h1>
                         <p class="mb-4">Aja Dynasty is a fusion of Nepalese culture and contemporary design, celebrating the present moment. The name “Aja” derives from Sanskrit, meaning “today,” symbolizing a focus on living in the present. Aja Dynasty blends Nepalese traditions with modern flair, offering high-quality, authentic Nepalese products. The website redesign aimed to globally showcase Nepal’s richness, present top-notch products, and become a symbol of Nepalese artistry and craftsmanship.</p>
                         <a href="https://ajadynasty.com/" class="mt-8 inline-flex h-[52px] items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">View Live Website <i class="las la-arrow-right ml-2 -rotate-45 text-3xl"></i></a>
                     </div>
-                    <div class="md:col-end-13 md:col-span-5">
+                    <div class="md:col-span-5 md:col-end-13">
                         <div class="mb-8">
                             <p class="mb-4 uppercase tracking-widest">Agency</p>
                             <p>Source Taggers</p>
