Before after images for cliff nepal

--- a/works/the-cliff-nepal.html
+++ b/works/the-cliff-nepal.html
@@ -129,6 +129,17 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="new-old mt-12 grid grid-cols-1 justify-between gap-16 text-center md:grid-cols-2">
+                    <div class="md:col-span-1">
+                        <h3 class="mb-4 text-2xl text-gray lg:text-3xl">Before</h3>
+                        <img src="../assets/images/cliff-before.png" alt="" />
+                    </div>
+                    <div class="md:col-span-1">
+                        <h3 class="mb-4 text-2xl lg:text-3xl">After</h3>
+                        <img src="../assets/images/cliff-after.png" alt="" />
+                    </div>
+                </div>
             </div>
         </div>
 
