Fix banner in mobile

--- a/works/insellerate.html
+++ b/works/insellerate.html
@@ -140,7 +140,7 @@
         </div>
 
         <!--Banner 1-->
-        <div class="h-screen bg-[url('../images/insellerate-banner.jpg')] bg-cover bg-fixed bg-center bg-no-repeat"></div>
+        <div class="h-screen bg-[url('../images/insellerate-banner.jpg')] bg-cover bg-scroll bg-center bg-no-repeat md:bg-fixed"></div>
         <p class="p-4 text-center font-light italic">Trendy angled mockups of Insellerate… but you are gonna learn all about this app in this case study!</p>
 
         <!--How it started-->
