--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -145,7 +145,7 @@
         </div>
 
         <!--Banner 1-->
-        <div class="h-screen bg-[url('../images/aja-banner.png')] bg-cover bg-fixed bg-center bg-no-repeat"></div>
+        <div class="h-screen bg-[url('../images/aja-banner.png')] bg-cover bg-scroll bg-center bg-no-repeat md:bg-fixed"></div>
 
         <!--How it started-->
         <div class="py-16 lg:py-32">
