--- a/works/amooma.html
+++ b/works/amooma.html
@@ -91,13 +91,13 @@
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-12">
-                    <div class="md:col-start-1 md:col-span-6">
+                    <div class="md:col-span-6 md:col-start-1">
                         <p class="mb-4 uppercase tracking-widest">About the Project</p>
                         <h1 class="mb-4 text-4xl lg:text-6xl">Project Background</h1>
                         <p class="mb-4">AMOOMA Spa & Sanctuary is a wellness center in Hong Kong dedicated to providing a tranquil environment for relaxation and rejuvenation. Offering services like facials, massages, and body treatments, the spa focuses on promoting holistic well-being through a minimalist and serene atmosphere. The website design project aimed to create an online presence reflecting this tranquility. Goals included user-friendly navigation, aesthetic consistency, and responsive design, resulting in a seamless and immersive digital experience.</p>
                         <a href="https://amooma.hk/" class="mt-8 inline-flex h-[52px] items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">View Live Website <i class="las la-arrow-right ml-2 -rotate-45 text-3xl"></i></a>
                     </div>
-                    <div class="md:col-end-13 md:col-span-5">
+                    <div class="md:col-span-5 md:col-end-13">
                         <div class="mb-8">
                             <p class="mb-4 uppercase tracking-widest">Agency</p>
                             <p>Source Taggers</p>
