--- a/works/insellerate.html
+++ b/works/insellerate.html
@@ -91,13 +91,13 @@
         <div class="py-16 lg:py-32">
             <div class="mx-auto max-w-7xl px-4">
                 <div class="grid grid-cols-1 justify-between gap-16 md:grid-cols-12">
-                    <div class="md:col-start-1 md:col-span-6">
+                    <div class="md:col-span-6 md:col-start-1">
                         <p class="mb-4 uppercase tracking-widest">About the Project</p>
                         <h1 class="mb-4 text-4xl lg:text-6xl">Project Background</h1>
                         <p class="mb-4">Insellerate is a leading mortgage CRM platform that previously offered a robust web application. However, users faced challenges accessing the platform from mobile devices, which limited their ability to manage leads and engage with clients on the go. To address this issue, Insellerate commissioned the development of a mobile app that would replicate the full functionality of their web application, ensuring seamless access and enhanced user experience for loan officers.</p>
                         <a href="https://apps.apple.com/us/app/insellerate/id1517753766?platform=iphone" class="mt-8 inline-flex h-[52px] items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">Download App Now <i class="las la-arrow-right ml-2 -rotate-45 text-3xl"></i></a>
                     </div>
-                    <div class="md:col-end-13 md:col-span-5">
+                    <div class="md:col-span-5 md:col-end-13">
                         <div class="mb-8">
                             <p class="mb-4 uppercase tracking-widest">Agency</p>
                             <p>Webbed Studio</p>
@@ -383,12 +383,12 @@
                     <div class="grid grid-cols-2 justify-between gap-4 text-center md:gap-8">
                         <div>
                             <p class="mb-4 text-xs uppercase tracking-widest md:text-base">Version 1</p>
-                            <img src="../assets/images/insellerate-home-v1.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-lead-v1.png" alt="" class="w-full" />
                             <p class="mt-4 text-xl md:text-4xl">✅</p>
                         </div>
                         <div>
                             <p class="mb-4 text-xs uppercase tracking-widest md:text-base">Version 2</p>
-                            <img src="../assets/images/insellerate-home-v2.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-lead-v2.png" alt="" class="w-full" />
                             <p class="mt-4 text-xl md:text-4xl">❌</p>
                         </div>
                     </div>
@@ -398,12 +398,12 @@
                     <div class="grid grid-cols-2 justify-between gap-4 text-center md:gap-8">
                         <div>
                             <p class="mb-4 text-xs uppercase tracking-widest md:text-base">Version 1</p>
-                            <img src="../assets/images/insellerate-home-v1.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-search-v1.png" alt="" class="w-full" />
                             <p class="mt-4 text-xl md:text-4xl">✅</p>
                         </div>
                         <div>
                             <p class="mb-4 text-xs uppercase tracking-widest md:text-base">Version 2</p>
-                            <img src="../assets/images/insellerate-home-v2.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-search-v2.png" alt="" class="w-full" />
                             <p class="mt-4 text-xl md:text-4xl">❌</p>
                         </div>
                     </div>
@@ -423,19 +423,19 @@
                     <p class="mb-4">To make Insellerate feel conversational and engaging, I focused on creating friendly copy and delightful illustrations. I paid special attention to empty states, error states, and loading screens, which are often overlooked. By enhancing these areas, I aimed to make every user interaction pleasant and engaging.</p>
                     <div class="mt-8 grid grid-cols-2 justify-between gap-4 text-center md:grid-cols-4 md:gap-8">
                         <div>
-                            <img src="../assets/images/insellerate-home-v1.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-blank-1.png" alt="" class="w-full" />
                             <p class="mt-4 text-xs uppercase md:text-base">NO SEARCH</p>
                         </div>
                         <div>
-                            <img src="../assets/images/insellerate-home-v2.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-blank-2.png" alt="" class="w-full" />
                             <p class="mt-4 text-xs uppercase tracking-widest md:text-base">NO RESULTS FOUND</p>
                         </div>
                         <div>
-                            <img src="../assets/images/insellerate-home-v3.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-blank-3.png" alt="" class="w-full" />
                             <p class="mt-4 text-xs uppercase tracking-widest md:text-base">NO MESSAGES</p>
                         </div>
                         <div>
-                            <img src="../assets/images/insellerate-home-v4.png" alt="" class="w-full" />
+                            <img src="../assets/images/insellerate-blank-4.png" alt="" class="w-full" />
                             <p class="mt-4 text-xs uppercase tracking-widest md:text-base">NO NOTES</p>
                         </div>
                     </div>
