remove blank target from source taggers

--- a/work.html
+++ b/work.html
@@ -181,12 +181,11 @@
                             </div>
                             <img src="assets/images/sourcetaggers-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
-                        <a href="works/source-taggers" target="_blank" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <a href="works/source-taggers" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
