Added aria-label for nav button

--- a/about.html
+++ b/about.html
@@ -53,7 +53,8 @@
                 <div>
                     <a href="/"> <img class="h-10 w-auto" src="assets/images/logo.svg" alt="Milan Manandhar" /></a>
                 </div>
-                <button @click="navbarOpen = !navbarOpen" class="relative h-4 w-6">
+
+                <button @click="navbarOpen = !navbarOpen" class="relative h-4 w-6" id="navButton" aria-label="Nav Button">
                     <div class="absolute top-1/2 h-0.5 w-full -translate-y-1/2 bg-white transition duration-300 before:absolute before:-top-2 before:left-0 before:h-0.5 before:w-full before:bg-white before:transition-all before:duration-300 after:absolute after:-bottom-2 after:left-0 after:h-0.5 after:w-full after:bg-white after:transition-all after:duration-300" :class="{'rotate-45 before:opacity-0 before:top-0 after:-rotate-90 after:!bottom-0' : navbarOpen}"></div>
                 </button>
             </div>
