Add Alt tag to profile picture

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <!--Caption-->
                 <div class="caption mx-auto flex h-full max-w-7xl flex-col items-center justify-center py-8 text-center text-white">
-                    <h1 class="flex items-center text-3xl font-bold text-white md:text-5xl xl:text-8xl">Hey there! I'm Milan. <img src="assets/images/profile-pic.png" class="-mt-8 ml-6 h-12 md:h-16 xl:h-24" /></h1>
+                    <h1 class="flex items-center text-3xl font-bold text-white md:text-5xl xl:text-8xl">Hey there! I'm Milan. <img src="assets/images/profile-pic.png" class="-mt-8 ml-6 h-12 md:h-16 xl:h-24" alt="Profile Picture" /></h1>
                     <div class="flex items-center space-x-8">
                         <div class="flex-auto">
                             <h1 class="text-3xl font-bold md:text-5xl xl:text-8xl">Crafting brands</h1>
