Add aria-lable to social links

--- a/index.html
+++ b/index.html
@@ -155,16 +155,16 @@
                 <!--Social Icons-->
                 <ul class="absolute bottom-2 left-1/2 mx-auto flex -translate-x-1/2 flex-row justify-center space-x-4 px-8 md:bottom-auto md:left-auto md:right-0 md:top-2/4 md:-translate-y-1/2 md:translate-x-0 md:flex-col md:space-x-0 md:space-y-4">
                     <li>
-                        <a href="https://dribbble.com/milanmdhr" class="text-3xl text-white hover:opacity-50" target="_blank"><i class="lab la-dribbble"></i></a>
+                        <a href="https://dribbble.com/milanmdhr" class="text-3xl text-white hover:opacity-50" target="_blank" aria-label="Dribbble"><i class="lab la-dribbble"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/milanmdhr/" class="text-3xl text-white hover:opacity-50" target="_blank"><i class="lab la-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/milanmdhr/" class="text-3xl text-white hover:opacity-50" target="_blank" aria-label="Linkedin"><i class="lab la-linkedin-in"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/uxmilan/" class="text-3xl text-white hover:opacity-50" target="_blank"><i class="lab la-instagram"></i></a>
+                        <a href="https://www.instagram.com/uxmilan/" class="text-3xl text-white hover:opacity-50" target="_blank" aria-label="Instagram"><i class="lab la-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="mailto:milanmdhr@gmail.com" class="text-3xl text-white hover:opacity-50"><i class="las la-envelope"></i></a>
+                        <a href="mailto:milanmdhr@gmail.com" class="text-3xl text-white hover:opacity-50" aria-label="Email: milanmdhr@gmail.com"><i class="las la-envelope"></i></a>
                     </li>
                 </ul>
                 <div class="developer absolute md:animate-developer">
@@ -547,16 +547,16 @@
                 <!--Social Icons-->
                 <ul class="mt-10 flex justify-center space-x-4">
                     <li>
-                        <a href="https://dribbble.com/milanmdhr" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark" target="_blank"><i class="lab la-dribbble"></i></a>
+                        <a href="https://dribbble.com/milanmdhr" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark" target="_blank" aria-label="Dribbble"><i class="lab la-dribbble"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/milanmdhr/" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark" target="_blank"><i class="lab la-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/milanmdhr/" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark" target="_blank" aria-label="Linkedin"><i class="lab la-linkedin-in"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/uxmilan/" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark" target="_blank"><i class="lab la-instagram"></i></a>
+                        <a href="https://www.instagram.com/uxmilan/" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark" target="_blank" aria-label="Instagram"><i class="lab la-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="mailto:milanmdhr@gmail.com" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark"><i class="las la-envelope"></i></a>
+                        <a href="mailto:milanmdhr@gmail.com" class="flex h-12 w-12 items-center justify-center rounded-full border-2 border-white p-1 text-center text-4xl text-white hover:border-dark hover:bg-dark" aria-label="Email: milanmdhr@gmail.com"><i class="las la-envelope"></i></a>
                     </li>
                 </ul>
                 <p class="mb-2 mt-10 text-sm text-green-900">&copy; 2024 All rights reserved.</p>
