Meta descriptions for Homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Milan Manandhar</title>
+        <title>Milan Manandhar - UI/UX Designer</title>
+        <meta name="description" content="Discover Milan Manandhar's portfolio, showcasing UI/UX design and web development projects. Learn more about his skills, experience, and services." />
         <link rel="shortcut icon" href="assets/images/favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
