Add Schema in homepage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,37 @@
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" integrity="sha512-tYKqO78H3mRRCHa75fms1gBvGlANz0JxjN6fVrMBvWL+vOOy200npwJ69OBl9XEsTu3yVUvZNrdWFIIrIf8FLg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="assets/css/style.css" />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "Person",
+                "name": "Milan Manandhar",
+                "url": "https://milanmdhr.com.np",
+                "image": "https://milanmdhr.com.np/path-to-your-image.jpg",
+                "sameAs": ["https://www.linkedin.com/in/milanmdhr", "https://twitter.com/milanmdhr", "https://github.com/milanmdhr"],
+                "jobTitle": "UI/UX Designer and Web Developer",
+                "worksFor": {
+                    "@type": "Organization",
+                    "name": "Freelance"
+                },
+                "address": {
+                    "@type": "PostalAddress",
+                    "addressLocality": "Kathmandu",
+                    "addressRegion": "Bagmati",
+                    "addressCountry": "Nepal"
+                },
+                "email": "mailto:milanmdhr@gmail.com",
+                "telephone": "+977-9849361433",
+                "description": "Discover Milan Manandhar's portfolio, showcasing UI/UX design and web development projects. Learn more about his skills, experience, and services.",
+                "knowsAbout": ["UI/UX Design", "Web Design", "Frontend Development", "User Experience", "User Interface"],
+                "alumniOf": {
+                    "@type": "CollegeOrUniversity",
+                    "name": "London Metropolitan University",
+                    "sameAs": "https://www.londonmet.ac.uk/"
+                }
+            }
+        </script>
+
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZXPJQHYWHZ"></script>
         <script>
