--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
                                 <p class="uppercase">UI/UX/WEB DESIGN &bull; 2024</p>
-                                <h3 class="mb-4 text-3xl">Aja Dynasty</h3>
+                                <p class="heading-font mb-4 text-3xl">Aja Dynasty</p>
                             </div>
                             <img src="assets/images/aja-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
@@ -264,7 +264,7 @@
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p>
                                 <p class="uppercase">Mobile App DESIGN &bull; 2018</p>
-                                <h3 class="mb-4 text-3xl">Insellerate</h3>
+                                <p class="heading-font mb-4 text-3xl">Insellerate</p>
                             </div>
                             <img src="assets/images/insellerate.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
@@ -296,7 +296,7 @@
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
                                 <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
                                 <p class="uppercase">UI/UX/WEB DESIGN &bull; 2020</p>
-                                <h3 class="mb-4 text-3xl">Amooma</h3>
+                                <p class="heading-font mb-4 text-3xl">Amooma</p>
                             </div>
                             <img src="assets/images/amooma-web.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
