fix product design and testimonials headings

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <div class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-3 lg:mt-16">
                     <div>
                         <img src="assets/images/icon-product.svg" alt="" class="mx-auto mb-4" />
-                        <h3 class="mb-3 text-center text-3xl">Product Design</h3>
+                        <p class="heading-font mb-4 text-3xl">Product Design</p>
                         <ul class="list-inside leading-loose">
                             <li>User Interface (UI) Design</li>
                             <li>User Experience (UX) Design</li>
@@ -408,7 +408,7 @@
                     <!--list-image-[url(../images/list-arrow.svg)]-->
                     <div>
                         <img src="assets/images/icon-web.svg" alt="" class="mx-auto mb-4" />
-                        <h3 class="mb-3 text-3xl">Website Design</h3>
+                        <p class="heading-font mb-4 text-3xl">Website Design</h3>
                         <ul class="list-inside leading-loose">
                             <li>Responsive Web Design</li>
                             <li>E-commerce Website Design</li>
@@ -421,7 +421,7 @@
                     </div>
                     <div>
                         <img src="assets/images/icon-brand.svg" alt="" class="mx-auto mb-4" />
-                        <h3 class="mb-3 text-3xl">Brand Design</h3>
+                        <p class="heading-font mb-4 text-3xl">Brand Design</h3>
                         <ul class="list-inside leading-loose">
                             <li>Logo Design</li>
                             <li>Brand Identity Design</li>
@@ -492,7 +492,7 @@
                                             <p>Fantastic and brilliant service. Highly recommend Milan!</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Dr. Hasan Asad</h3>
+                                            <p class="heading-font text-2xl lg:text-3xl">Dr. Hasan Asad</p>
                                             <p class="text-sm uppercase tracking-widest lg:text-base">The Bearded Toothfairy</p>
                                         </div>
                                     </div>
@@ -504,7 +504,7 @@
                                             <p>Collaborating with Milan on multiple projects has been an absolute pleasure. His incredible design talent and technical know-how have made a huge difference in our projects. Milan goes above and beyond to make sure everything aligns perfectly with our vision, making every step of the process smooth and enjoyable. He's not just a brilliant designer; he's a great team player who genuinely makes our work better.</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Daniel Mulé</h3>
+                                            <p class="heading-font text-2xl lg:text-3xl">Daniel Mulé</p>
                                             <p class="text-sm uppercase tracking-widest lg:text-base">Founder, Bodega Cats of New York</p>
                                         </div>
                                     </div>
@@ -516,7 +516,7 @@
                                             <p>Incredible logo! Milan nailed our brand identity with a design that's both visually stunning and memorable. Highly recommended!</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">My Darling Food</h3>
+                                            <p class="heading-font text-2xl lg:text-3xl">My Darling Food</p>
                                             <p class="text-sm uppercase tracking-widest lg:text-base">Influencer</p>
                                         </div>
                                     </div>
@@ -528,7 +528,7 @@
                                             <p>Love our new website! Milan nailed the modern, user-friendly design perfectly. Seamless collaboration and improved online presence. Highly recommended!</p>
                                         </div>
                                         <div class="mt-auto">
-                                            <h3 class="text-2xl lg:text-3xl">Suman</h3>
+                                            <p class="heading-font text-2xl lg:text-3xl">Suman</p>
                                             <p class="text-sm uppercase tracking-widest lg:text-base">Co-Founder</p>
                                         </div>
                                     </div>
