--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </button>
             </div>
             <div class="absolute left-0 right-0 top-full z-40 flex h-screen w-full translate-x-full transform flex-col justify-between overflow-y-auto bg-dark pb-[72px] transition duration-200" :class="{'translate-x-full': !navbarOpen, 'translate-x-0': navbarOpen}">
-                <ul class="px-8 pt-[20%]">
+                <div class="px-8 pt-[20%]">
                     <div class="flex flex-col space-y-4 text-center text-white">
                         <a href="work" class="px-3 py-2 text-2xl font-light uppercase tracking-widest hover:text-primary">Work</a>
                         <a href="about" class="px-3 py-2 text-2xl font-light uppercase tracking-widest hover:text-primary">About</a>
@@ -99,7 +99,7 @@
                         <a href="https://medium.com/@milanmdhr" target="_blank" class="px-3 py-2 text-2xl font-light uppercase tracking-widest hover:text-primary">Blog</a>
                         <a href="contact" class="px-3 py-2 text-2xl font-light uppercase tracking-widest hover:text-primary">Let's Talk</a>
                     </div>
-                </ul>
+                </div>
                 <div class="p-8">
                     <a href="contact" class="flex items-center justify-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400">Hire Me <i class="las la-arrow-right ml-2 text-3xl"></i></a>
                 </div>
