Work order change

--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -114,6 +114,7 @@
                                 <p class="inline-block w-auto rounded-full border border-dark px-4 py-1">Prototyping</p>
                                 <p class="inline-block w-auto rounded-full border border-dark px-4 py-1">UI/UX Design</p>
                                 <p class="inline-block w-auto rounded-full border border-dark px-4 py-1">Web Design</p>
+                                <p class="inline-block w-auto rounded-full border border-dark px-4 py-1">Wordpress</p>
                                 <p class="inline-block w-auto rounded-full border border-dark px-4 py-1">HTML & CSS Developer</p>
                             </div>
                         </div>
