--- a/work.html
+++ b/work.html
@@ -83,6 +83,8 @@
                     <h1 class="text-3xl font-bold md:text-5xl xl:text-8xl">15 years of design work</h1>
 
                     <p class="mt-4 text-lg font-light lg:text-2xl">A collection of some of my favorite Design projects from the past few years.</p>
+
+                    <a href="assets/pdf/Milan-UI_UX-Portfolio-2024.pdf" class="mt-8 inline-flex items-center rounded-full bg-primary px-8 py-2 uppercase tracking-widest text-dark hover:bg-green-400" target="_blank">Download my Portfolio <i class="las la-arrow-right ml-2 text-3xl"></i></a>
                 </div>
             </div>
         </main>
